FrameView: Don't throttle display:none frames

While migrating to use IntersectionObserver to control frame throttling
we accidentally also started throttling display:none frames (which IObs.
considers invisible). This is not safe because many sites use such
frames for driving UI logic.

This patch disallows throttling for display:none frames. The revised
logic also matches the frame throttling implementation in Safari.

BUG=680925
TEST=Open the login popup twice on http://www.espn.in/ and observe no delay.

Review-Url: https://codereview.chromium.org/2658063002
Cr-Commit-Position: refs/heads/master@{#446419}

Former-commit-id: 02d1c14d47b948cf6b4eb49c3b4cef697525f03e